objects/EUR_CRM_Contract_Mechanic__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Brand_Quality_Category_Ref__c</fullName>
        <label>Brand-Quality Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality_Category__c</fullName>
        <formula>EUR_CRM_Brand_Quality__r.EUR_CRM_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand-Quality Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality_Name_Ref__c</fullName>
        <label>Brand - Quality Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality_Name__c</fullName>
        <formula>EUR_CRM_Brand_Quality__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand-Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality-Size (EU)</label>
        <referenceTo>EUR_CRM_Size__c</referenceTo>
        <relationshipName>Contract_Mechanics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipName>Contract_Mechanics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>EUR_CRM_Brand__c</referenceTo>
        <relationshipName>EUR_CRM_Contract_Mechanics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Mechanic_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract Mechanic reference for Cocktail requirement; all Contract Mechanics for Cocktail should be from Pouring</description>
        <label>Contract Mechanic Reference</label>
        <referenceTo>EUR_CRM_Contract_Mechanic__c</referenceTo>
        <relationshipName>Contract_Mechanics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;PRT&quot;), &quot;PRT&quot;, RIGHT(LEFT(RecordType.DeveloperName,6),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mechanic_Name__c</fullName>
        <formula>EUR_CRM_Mechanic__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mechanic Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mechanic_Type_Name__c</fullName>
        <formula>EUR_CRM_Mechanic__r.EUR_CRM_Mechanic_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mechanic Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mechanic__c</fullName>
        <label>Mechanic</label>
        <referenceTo>EUR_CRM_Mechanic__c</referenceTo>
        <relationshipName>Contract_Mechanics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU (EU)</label>
        <referenceTo>EUR_CRM_SKU__c</referenceTo>
        <relationshipName>Contract_Mechanics</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contract Mechanic (EU)</label>
    <listViews>
        <fullName>All_GB_Contracts</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Mechanic_Name__c</columns>
        <columns>EUR_CRM_Brand_Quality_Name__c</columns>
        <columns>EUR_CRM_Brand_Quality_Category_Ref__c</columns>
        <columns>EUR_CRM_Brand_Quality_Name_Ref__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Mechanic_Type_Name__c</columns>
        <columns>EUR_CRM_Contract_Mechanic_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Contract_Mechanic__c.EUR_GB_Contract_Mechanic</value>
        </filters>
        <label>All GB Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_GB</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_FI_Contract_Mechanic</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Mechanic__c</columns>
        <columns>EUR_CRM_Mechanic_Type_Name__c</columns>
        <columns>EUR_CRM_Brand__c</columns>
        <columns>EUR_CRM_Brand_Quality_Size__c</columns>
        <columns>EUR_CRM_Brand_Quality_Name__c</columns>
        <columns>EUR_CRM_SKU__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Contract_Mechanic__c.EUR_FI_Contract_Mechanic</value>
        </filters>
        <label>EUR FI Contract Mechanic</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_FI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CMN-{0000000000}</displayFormat>
        <label>Contract Mechanic No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Mechanic (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_DE_Contract_Mechanic</fullName>
        <active>true</active>
        <description>For Germany</description>
        <label>EUR_DE_Contract_Mechanic</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Contract_Mechanic</fullName>
        <active>true</active>
        <label>EUR FI Contract Mechanic</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Contract_Mechanic</fullName>
        <active>true</active>
        <label>GB Contract Mechanic</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>